--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="__OG_TITLE__" />
+      <meta property="og:description" content="__OG_DESCRIPTION" />
     <title>FecaScrab</title>
   </head>
   <body>
