--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="__OG_TITLE__" />
-      <meta property="og:description" content="__OG_DESCRIPTION" />
+    <meta property="og:title" content="FecaScrab - Féderation Camerounaise de Scrabble" />
+    <meta property="og:url" content="fecascrab.com" />
+    <meta name='description' content='Féderation Camerounaise de Scrabble'/>
+    <meta property="og:image" content="/logo" />
     <title>FecaScrab</title>
   </head>
   <body>
