--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta property="og:title" content="FecaScrab - Féderation Camerounaise de Scrabble" />
     <meta property="og:url" content="fecascrab.com" />
     <meta name='description' content='Féderation Camerounaise de Scrabble'/>
-    <meta property="og:image" content="/logo" />
+    <meta property="og:image" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
+    <meta name="twitter:image" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
     <title>FecaScrab</title>
   </head>
   <body>
