--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name='description' content='Féderation Camerounaise de Scrabble'/>
     <meta property="og:image" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
     <meta name="twitter:image" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:secure_url" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
     <title>FecaScrab</title>
   </head>
   <body>
