--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
     <meta property="og:title" content="FecaScrab - Féderation Camerounaise de Scrabble" />
     <meta property="og:url" content="fecascrab.com" />
-    <meta name='description' content='Féderation Camerounaise de Scrabble'/>
+    <link rel='canonical' href="https://fecascrab.com/" />
+      <meta name='description' content='Féderation Camerounaise de Scrabble'/>
+      <meta name='keywords' content='scrabble,cameroun,féderation camerounaise,cameroon,compétition scrabble,scraper,jeu de société,mot' />
     <meta property="og:image" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
     <meta name="twitter:image" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:secure_url" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
+    <meta name="twitter:description" content='scrabble,cameroun,féderation camerounaise,cameroon,compétition scrabble,scraper,jeu de société,mot' />
     <title>FecaScrab</title>
   </head>
   <body>
