--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:secure_url" content="https://fecascrab.com/assets/logo-DtUwrp8_.png" />
-    <meta name="twitter:description" content='scrabble,cameroun,féderation camerounaise,cameroon,compétition scrabble,scraper,jeu de société,mot' />
+    <meta name="twitter:description" content='FecaScrab - Féderation Camerounaise de Scrabble' />
     <title>FecaScrab</title>
   </head>
   <body>
